package datastore.pb;

message DataObj {
        optional string FilePath = 1;
        optional uint64 Offset = 2;
        optional uint64 Size = 3;
}

message DataObjs{
        repeated DataObj objects = 1;
}